# VERDE-X

./: .env.example  README.md  SECURITY.md  docker-compose.yml  gitignore  package.json  (root monorepo)
 apps/api/: Cargo.toml
 apps/api/src/: config.rs 
 apps/mobile/src/components/: WalletCard.tsx 
 apps/mobile/src/screens/: HomeScreen.tsx 
 infra/: fly.toml
.github/workflows/: ci-cd.yml    deploy-mobile.yml
apps/api/migrations/: 20240715120000_init.sql 
apps/api/src/: error.rs   lib.rs   main.rs   models.rs
apps/api/src/handlers/: health.rs
apps/api/src/middleware/: jwt.rs
apps/api/src/routes/: auth.rs  disputes.rs    escrows.rs  mod.rs  mod.rs   mpesa.rs   wallets.rs 
apps/api/src/services/: btc.rs  mod.rs   mpesa.rs   sol.rs
apps/api/src/utils/: hash.rs  
apps/mobile/: .eslintrc.js    App.tsx   package.json 
apps/mobile/src/: App.tsx
apps/mobile/src/api/: client.ts
apps/mobile/src/components/: EscrowCard.tsx    PriceTicker.tsx   QRScanner.tsx  QuickActions.tsx  
apps/mobile/src/constants/: colors.ts
apps/mobile/src/hooks/: useAuth.ts  useEscrows.ts
apps/mobile/src/navigation/: RootStack.tsx
contracts/: README.md
contracts/bitcoin/: README.md    psbt_escrow.py   requirements.txt
contracts/solana/: README.md
contracts/solana/client/: index.ts
contracts/solana/escrow/: Anchor.toml
infra/: Dockerfile.api  Dockerfile.mobile  fly.mobile.toml  fly.secrets.toml 
infra/k8s/: api-deployment.yaml  ingress.yaml  namespace.yaml  secret.yaml
infra/scripts/: deploy_dev.sh  deploy_prod.sh  deploy_prod.sh   init_db.sh
(+15 files in other folders)
