[package]
name = "verdex-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.25", features = ["tokio-comp"] }
bip39 = "2.0"
bitcoin = { version = "0.32", features = ["serde"] }
solana-sdk = "1.18"
